# AuthServer

./: .gitignore  Cargo.toml  Dockerfile  build.gradle  build.rs  flow.vsdx  settings.gradle
.github/workflows/: codeql-analysis.yml
src/: appdata.rs  environment.rs  main.rs  utils.rs
src/authentication/: api_tokens.rs  exchange_code_for_token.rs  mod.rs  session_controller.rs  token_exchange_response.rs
src/database/: database.rs
src/http_controllers/: get_oauth_grant.rs  get_oauth_login.rs  mod.rs  post_check_session.rs  post_get_token.rs  post_oauth_token.rs
src/main/java/nl/thedutchmc/authserver/: App.java  Config.java  Http.java  TokenManager.java  User.java
src/main/java/nl/thedutchmc/authserver/auth/: ApiManager.java  SessionManager.java
src/main/java/nl/thedutchmc/authserver/database/: ResultObject.java  SqlManager.java  StatementType.java
src/main/java/nl/thedutchmc/authserver/runnables/: DiscoveryDocument.java  RefreshToken.java
src/main/java/nl/thedutchmc/authserver/session/: SessionManager.java
src/main/java/nl/thedutchmc/authserver/springcontrollers/: GetController.java  PostController.java
src/main/resources/templates/: grant.html  login.html
src/threads/: discovery_document.rs  mod.rs  refresh_token.rs
templates/: login.html
