[package]
name = "auth_server"
version = "0.1.0"
authors = ["TheDutchMC04 <tobias64a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
tera = "1.6.1"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3.13"
include_dir = "0.6.0"
rand = "0.8.3"
qstring = "0.7.2"
mysql = "20.1.0"
reqwest = { version = "0.11.1", features = ["json", "blocking"] }
rsa = "0.3.0"

[build-dependencies]
include_dir = "0.6.0"
